--- a/_site.yml
+++ b/_site.yml
@@ -13,11 +13,17 @@ navbar:
     - text: "Blog"
     - href: posts.html
     - text: "Function a Week"
-      href: function.html
+      menu:
+        - text: "tidyr::pivot_wider"
+          href: pivot_wider.html
+        - text: "janitor::clean_names"
+          href: clean_names.html
     - text: "20 Minute Modules"
-      href: modules.html
+      menu:
+        - text: "Module 1:  Getting Started"
+          href: mod1.html
+        - text: "Module 2:  Indexing, Calculation, etc."
+          href: mod2.html
     - text: "CV"
       href: cv.html
-    
-     
 output: distill::distill_article
