--- a/_site.yml
+++ b/_site.yml
@@ -32,4 +32,6 @@ navbar:
           href: mod2.html
     - text: "CV"
       href: cv.html
+    - icon: fa fa-rss
+      href: index.xm
 output: distill::distill_article
