--- a/_site.yml
+++ b/_site.yml
@@ -31,7 +31,7 @@ navbar:
         - text: "Module 2:  Indexing, Calculation, etc."
           href: mod2.html
     - text: "CV"
-      href: cv.html
+      href: cv.pdf
     - icon: fa fa-rss
       href: index.xm
 output: distill::distill_article
